Expande comandos de gerenciamento dos mundos